--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/sl.css" />
 </head>
 
-<body>
+<body class="spinnerprogress">
 
 <div id="debug">
 	<label>
@@ -316,6 +316,11 @@
     </div><!-- \container -->
 </div><!-- \wrapper -->
 
+<div class="progress">
+	<div id="progress-wrapper">
+		<img src="img/index.fidget-spinner.svg" class="mauto" />
+	</div>
+</div>
 
 <audio id="correctsound" name="correctsound">
 	<source src="audio/correct.ogg" type="audio/ogg">
